--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rm -rfv ./dist && tsc",
+    "start": "node dist/index.js",
     "watch": "tsc --watch",
     "dev": "NODE_ENV=dev nodemon src/index.ts"
   },
